data/derived/sp14/progs/unify/prog2949.ml.out
Characters 98-99:
  List.fold_left f base fs;;
                 ^
Error: This expression has type 'a -> ('b -> 'c) -> ('a -> 'b) -> 'c
       but an expression was expected of type 'a -> ('b -> 'c) -> 'a
       The type variable 'a occurs inside ('a -> 'b) -> 'c
